--- a/css/estilo.css
+++ b/css/estilo.css
@@ -1,3 +1,13 @@
+.bgheader{
+	background: url(../img/bg/natural2.png);
+	margin-top: 15px;
+}
+
+.bgcontainer{
+	background: url(../img/bg/natural.png);	
+}
+
+
 *{
 	font-family: 'Lato', sans-serif;
 	font-size: 300;
@@ -5,6 +15,7 @@
 
 body{
 	padding-top: 50px;
+	background: gray
 }
 
 section{
@@ -28,8 +39,8 @@ footer{
 
 
 .divslider{
+	background: url(../img/bg/natural.png);
 	padding-bottom: 15px;
-	background-repeat: no-repeat;
 }
 
 .div_colorida{
@@ -79,4 +90,19 @@ img.grayscale:hover {
 }
 .contato .aviso{
 	height: 15px;
+}
+.section_interna{
+	padding-top: 0px;
+}
+.form-login{
+	max-width: 350px;
+	margin-left: auto;
+	margin-right: auto;
+	padding: 10px;
+	border-radius: 10px;
+	background: #eee;
+}
+
+.form-login input{
+	margin-bottom: 10px
 }
