--- a/css/estilo.css
+++ b/css/estilo.css
@@ -15,7 +15,7 @@
 
 body{
 	padding-top: 50px;
-	background: gray
+	background: #66CDAA;
 }
 
 section{
@@ -104,5 +104,19 @@ img.grayscale:hover {
 }
 
 .form-login input{
-	margin-bottom: 10px
+	margin-bottom: 10px;
+}
+
+.panel{
+	margin-bottom: 2px;
+}
+.conteudo_painel{
+	background: #4682B4;
+	border-radius: 8px;
+	border: 1px solid #eee;
+	box-shadow: 2px 2px 5px #888;
+}
+
+.conteudo_painel_int{
+	padding: 12px;
 }
